samples/_failures_safe/1761158457_5c4566_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09e77702.c: In function ‘main’:
./samples/SAFE/__tmp_09e77702.c:172:16: error: missing terminating " character
  172 |         printf("Decomp
      |                ^~~~~~~
./samples/SAFE/__tmp_09e77702.c:172:9: error: expected expression at end of input
  172 |         printf("Decomp
      |         ^~~~~~
./samples/SAFE/__tmp_09e77702.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09e77702.c:172:9: error: expected declaration or statement at end of input
